# pdf-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  dependency-review.yml  deploy-demo.yml  publish-pypi.yml
benchmark_data/: boilerplate_corpus.json  boilerplate_real_corpus.json  boilerplate_real_results.md  boilerplate_results.md  boilerplate_search_queries.json  boilerplate_search_results.md  cjk_keyword_queries.json  cjk_keyword_results.md  coherence_baseline.json  coherence_calibration.json  coherence_corpus.json  coherence_results.md  e5_prefix_corpus.json  e5_prefix_results.md  embedding_evaluation_summary.md  excerpt_quality_queries.json  ground_truth.json  hybrid_section_queries.json  large_models_results.md  mlx_backend_results.md  parallel_pages_results.md  pregate_validation_corpus.json  reading_order_corpus.json  reading_order_results.md  rrf_v2_baseline.json  rrf_v2_queries.json  rrf_v2_results.md  vs_pdf_oxide_results.md  vs_pdf_reader_mcp_results.md
benchmark_data/content_trust_corpus/: generate.py
benchmark_data/content_trust_corpus/real/: README.md
docs/: ROADMAP.md  configuration.md  contributing.md  embedding-models.md  investigated-rejected.md  tool-reference.md
pages/: CNAME  index.html
scripts/: _retrieval_metrics.py  audit.sh  benchmark_cjk_keyword.py  benchmark_content_trust.py  benchmark_drilldown.py  benchmark_embedding_models.py  benchmark_excerpt_quality.py  benchmark_hybrid_sections.py  benchmark_mlx_backend.py  benchmark_ocr_corpus.py  benchmark_parallel_pages.py  benchmark_pooling_attribution.py  benchmark_reading_order.py  benchmark_rrf.py  benchmark_search_impact.py  benchmark_sections.py  benchmark_vs_pdf_oxide.py  benchmark_vs_pdf_reader_mcp.py  compare_search.py  compare_semantic_search.py  eval_coherence.py  generate_demo_sample_pdf.py  probe_writing_mode.py  release.py
scripts/archive/: README.md  benchmark_boilerplate.py  benchmark_coreml_provider.py  benchmark_e5_prefix.py  benchmark_hybrid_sections.py  benchmark_large_models.py  benchmark_minilm_mlx.py  benchmark_search_impact.py  test_benchmark_drilldown.py  test_benchmark_hybrid_sections.py  test_benchmark_large_models.py  test_benchmark_mlx_backend.py
scripts/demo-recorder/: README.md  package.json  record.mjs
src/pdf_mcp/: __init__.py  cache.py  config.py  content_trust.py  edit_tools.py  editor.py  embedder.py  extractor.py  parallel.py  section_detector.py  server.py  url_fetcher.py
tests/: conftest.py  test_benchmark_cjk_keyword.py  test_benchmark_content_trust.py  test_benchmark_drilldown.py  test_benchmark_embedding_models.py  test_benchmark_hybrid_sections.py  test_benchmark_large_models.py  test_benchmark_mlx_backend.py  test_benchmark_reading_order.py  test_benchmark_rrf_v2.py  test_benchmark_sections.py  test_cache.py  test_config.py  test_content_trust.py  test_demo_sample_pdf.py  test_editor.py  test_embedder.py  test_eval_coherence.py  test_extractor.py  test_integration.py  test_overseg_integration.py  test_parallel.py  test_pdf_reader.py  test_pregate_validation.py  test_release.py  test_response_caps.py  test_retrieval_metrics.py  test_section_detector.py  test_server.py  test_server_info.py  test_startup_env.py  test_tool_descriptions.py  test_url_fetcher.py  test_url_fetcher_security.py  test_vertical_reorder_integration.py
tests/benchmark/: README.md  prompts.md  results_template.md  run_benchmark.py  test_prompts.json
