[project]
name = "pdf-mcp"
version = "1.17.0"
description = "Surgical PDF access for AI agents: keyword, semantic & hybrid search; structured extraction of text, tables, images & TOC; OCR; and CJK/vertical-script support — with SQLite caching."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Kevin Tan", email = "jingzheng.tan@gmail.com" }
]
maintainers = [
    { name = "Kevin Tan", email = "jingzheng.tan@gmail.com" }
]
keywords = [
    "mcp",
    "pdf",
    "ai",
    "claude",
    "llm",
    "document-processing",
    "model-context-protocol",
    "anthropic",
    "pdf-extraction",
    "ai-agent",
    "pdf-reader",
    "document-ai"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=3.0.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0",
    # Pulled in transitively via fastmcp -> mcp; floor to clear GHSA-4xgf-cpjx-pc3j.
    "pydantic-settings>=2.14.2",
    "httpx>=0.27.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "pillow>=10.0",
    "mypy>=1.8.0",
    "flake8>=7.0",
    "black>=26.3.1",
    "pip-audit>=2.7.0",
    # Pulled in transitively via pip-audit -> pip-api; pin to clear PYSEC-2026-196.
    "pip>=26.1.2",
    # Pulled in transitively via pip-audit -> cachecontrol; floor to clear
    # GHSA-6v7p-g79w-8964 (dev/build-time only, not shipped at runtime).
    "msgpack>=1.2.1",
    "numpy>=1.24",
    "pre-commit>=3.5",
    # Column-aware extraction tests need the real detector; reference the
    # extra so its version floor lives in one place (see `multicolumn`).
    "pdf-mcp[multicolumn]",
]

semantic = [
    "fastembed>=0.7,<1.0",
    "numpy>=1.24",
]

# CJK (Japanese/Chinese/Korean) search. FTS5 keyword matching is unreliable on
# unspaced CJK, so semantic search is effectively required for usable CJK
# retrieval. Extraction itself (read/render) needs no extra. Self-referential
# extra → pulls exactly fastembed + numpy.
cjk = ["pdf-mcp[semantic]"]

# Column-aware reading order for multi-column PDFs. Optional because it pulls
# pymupdf_layout/onnxruntime; without it, extraction gracefully falls back to
# the positional-sort path (which interleaves columns on multi-column pages).
multicolumn = [
    "pymupdf4llm>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/jztan/pdf-mcp"
Documentation = "https://github.com/jztan/pdf-mcp#readme"
Repository = "https://github.com/jztan/pdf-mcp"
Issues = "https://github.com/jztan/pdf-mcp/issues"
Changelog = "https://github.com/jztan/pdf-mcp/blob/master/CHANGELOG.md"

[project.scripts]
pdf-mcp = "pdf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning:importlib",
    "ignore:builtin type Swig:DeprecationWarning",
]
markers = [
    "integration: end-to-end tests requiring system dependencies (e.g. Tesseract)",
    "slow: billed and/or multi-minute tests excluded from the release gate (e.g. the claude-CLI coherence eval)",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "pymupdf"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "fastembed"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymupdf4llm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymupdf4llm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pdf_mcp.extractor", "pdf_mcp.server", "pdf_mcp.embedder"]
disallow_untyped_calls = false
warn_unused_ignores = false
